settings overflow auto fixed

--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -26,3 +26,11 @@ mat-panel-description.description {
 mat-panel-title{
   width: 30vw
 }
+
+.content{
+  max-height: 378px;
+  overflow: auto;
+}
+
+
+ 
